Revision history for cif-v1

v1.0.2  2014-
    - fixed #60 (logged searches), requres ALTER TABLE search (see libcif-dbi/schemas/Pg/search.sql)
    - fixed #61 (apache2 hangs on bare metal with many cores)

v1.0.1  2013-11-19
    - migrated all submodules into main tree (cleaner dev/forking)
    - cleaned up Net::DNS::Match, cif-v1 now requires [Net::DNS::Match v0.05](http://search.cpan.org/~saxjazman/Net-DNS-Match/lib/Net/DNS/Match.pm)
    - migrated all submodules into main tree (cleaner dev/forking)
    - **cif-v1-v1.0.1.tar.gz** is the server instance, which includes libcif
    - **libcif-v1.0.1.tar.gz** is the client side lib's if you need access from a different instance
    - server install instructions are [here](https://code.google.com/p/collective-intelligence-framework/wiki/ServerInstall_v1)

[libcif]
    - fixes https://github.com/collectiveintel/libcif/issues/13
    - bugfix to configure.ac wrt protocol/
    - bugfix to -G flag
    - various feed search bugfixes
    - bugfix to build
    - fixed: https://github.com/collectiveintel/cif-v1/issues/53

[libcif-dbi]
    - bugfix to cif_apikeys when deleting specific keys
    - bugfix to domain whitelisting, requires Net::DNS::Match v0.05
    - various feed search bugfixes
    - bugfixes to feed retention code

[cif-smrt]
    - bugfix to rules [drg]
    - bugfix to goback flag
    - added a 'prefetch' execution flag
    - removed mpatrol as a default feed, new business model, set as example.
    - bugfix to ParseJson
    - fixed: https://github.com/collectiveintel/cif-v1/issues/55
    - fixed: https://github.com/collectiveintel/cif-v1/issues/56 (ParseJson)

[cif-router]
    - bugfix to protocol version check

v1.0.0 2013-08-30
    [libcif]
    - added send_keypairs function
    - bugfix to bin/cif

    [libcif-dbi]
    - merged asn, cc and rir plugins back into libcif-dbi
    - bugfix to cif_apikeys
    - bugfix to how mutex's are handled (using unlink)

    [cif-smrt]
    - dep fix for net-abuse-utils